--- a/_config.yml
+++ b/_config.yml
@@ -7,8 +7,8 @@
 # https://learnxinyminutes.com/docs/yaml/
 
 title: DataCol
-tagline: A site that displays up to date COVID-19 stats, powered by fastpages.
-description: A site that displays up to date COVID-19 stats, powered by fastpages.
+tagline: Datos para un mejor Colima.
+description: Datos para un mejor Colima.
 github_username: jballesterosc_
 # you can comment the below line out if your repo name is not different than your baseurl
 github_repo: "datacol"
@@ -40,11 +40,11 @@ baseurl: "" # the subpath of your site, e.g. "/blog".
 # Github and twitter are optional:
 minima:
   social_links:
-    twitter: HamelHusain
-    github: hamelsmu
+    twitter: jballesterosc_
+    github: jballesteros
 
 twitter:
-  username: HamelHusain
+  username: jballesterosc_
   card: summary
 
 # Set this to true to get LaTeX math equation support
@@ -60,7 +60,7 @@ show_image: true
 show_tags: true
 
 # Add your Google Analytics ID here if you have one and want to use it
-google_analytics: UA-57531313-4
+google_analytics: UA-165979419-1
 
 exclude:
   - docker-compose.yml
