--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 title: DataCol
 tagline: Datos para un mejor Colima.
 description: Datos para un mejor Colima.
-github_username: jballesterosc_
+github_username: jballesterosc
 # you can comment the below line out if your repo name is not different than your baseurl
 github_repo: "datacol"
 
@@ -41,7 +41,7 @@ baseurl: "" # the subpath of your site, e.g. "/blog".
 minima:
   social_links:
     twitter: jballesterosc_
-    github: jballesteros
+    github: jballesterosc
 
 twitter:
   username: jballesterosc_
